python/microllm/_capi.py

from __future__ import annotations

import ctypes
import ctypes.util
import enum
import os
from pathlib import Path
from typing import Iterable, Sequence


class MicroLLMError(RuntimeError):
    pass


class DType(enum.IntEnum):
    FLOAT32 = 0
    INT32 = 1
    FLOAT16 = 2
    BFLOAT16 = 3


class Device(enum.IntEnum):
    CPU = 0
    HIP = 1


class _TensorHandle(ctypes.Structure):
    pass


_TensorPointer = ctypes.POINTER(_TensorHandle)


class _EventHandle(ctypes.Structure):
    pass


_EventPointer = ctypes.POINTER(_EventHandle)


class _StreamHandle(ctypes.Structure):
    pass


_StreamPointer = ctypes.POINTER(_StreamHandle)
_CUintptr = ctypes.c_size_t


def _library_path() -> str:
    configured = os.environ.get("MICROLLM_LIBRARY")
    if configured:
        return configured
    discovered = ctypes.util.find_library("microllm")
    if discovered:
        return discovered
    candidates = [
        Path(__file__).resolve().parent / "libmicrollm.so",
        Path(__file__).resolve().parent.parent / "lib" / "libmicrollm.so",
    ]
    for candidate in candidates:
        if candidate.exists():
            return str(candidate)
    raise MicroLLMError(
        "libmicrollm was not found; set MICROLLM_LIBRARY to the built shared library"
    )


_lib = ctypes.CDLL(_library_path())
_lib.ml_capi_version.restype = ctypes.c_uint32
_lib.ml_engine_version.restype = ctypes.c_char_p
_lib.ml_last_error.restype = ctypes.c_char_p
_lib.ml_hip_device_count.argtypes = [ctypes.POINTER(ctypes.c_int)]
_lib.ml_hip_device_count.restype = ctypes.c_int
_lib.ml_tensor_from_f32.argtypes = [
    ctypes.POINTER(ctypes.c_float),
    ctypes.POINTER(ctypes.c_int64),
    ctypes.c_size_t,
    ctypes.c_int,
    ctypes.c_int,
    ctypes.POINTER(_TensorPointer),
]
_lib.ml_tensor_from_f32.restype = ctypes.c_int
_lib.ml_tensor_from_i32.argtypes = [
    ctypes.POINTER(ctypes.c_int32),
    ctypes.POINTER(ctypes.c_int64),
    ctypes.c_size_t,
    ctypes.c_int,
    ctypes.c_int,
    ctypes.POINTER(_TensorPointer),
]
_lib.ml_tensor_from_i32.restype = ctypes.c_int
_lib.ml_tensor_from_external.argtypes = [
    _CUintptr,
    ctypes.c_size_t,
    ctypes.POINTER(ctypes.c_int64), ctypes.POINTER(ctypes.c_int64),
    ctypes.c_size_t, ctypes.c_int, ctypes.c_int, ctypes.c_int,
    ctypes.POINTER(_TensorPointer),
]
_lib.ml_tensor_from_external.restype = ctypes.c_int
_lib.ml_tensor_destroy.argtypes = [_TensorPointer]
_lib.ml_tensor_destroy.restype = None
_lib.ml_tensor_rank.argtypes = [_TensorPointer, ctypes.POINTER(ctypes.c_size_t)]
_lib.ml_tensor_rank.restype = ctypes.c_int
_lib.ml_tensor_shape.argtypes = [_TensorPointer, ctypes.c_size_t, ctypes.POINTER(ctypes.c_int64)]
_lib.ml_tensor_shape.restype = ctypes.c_int
_lib.ml_tensor_numel.argtypes = [_TensorPointer, ctypes.POINTER(ctypes.c_int64)]
_lib.ml_tensor_numel.restype = ctypes.c_int
_lib.ml_tensor_dtype.argtypes = [_TensorPointer, ctypes.POINTER(ctypes.c_int)]
_lib.ml_tensor_dtype.restype = ctypes.c_int
_lib.ml_tensor_device.argtypes = [
    _TensorPointer,
    ctypes.POINTER(ctypes.c_int),
    ctypes.POINTER(ctypes.c_int),
]
_lib.ml_tensor_device.restype = ctypes.c_int
_lib.ml_tensor_is_owning.argtypes = [_TensorPointer, ctypes.POINTER(ctypes.c_int)]
_lib.ml_tensor_is_owning.restype = ctypes.c_int
_lib.ml_tensor_data_ptr.argtypes = [_TensorPointer, ctypes.POINTER(ctypes.c_size_t)]
_lib.ml_tensor_data_ptr.restype = ctypes.c_int
_lib.ml_tensor_storage_bytes.argtypes = [
    _TensorPointer, ctypes.POINTER(ctypes.c_size_t)]
_lib.ml_tensor_storage_bytes.restype = ctypes.c_int
_lib.ml_tensor_copy_f32.argtypes = [_TensorPointer, ctypes.POINTER(ctypes.c_float), ctypes.c_size_t]
_lib.ml_tensor_copy_f32.restype = ctypes.c_int
_lib.ml_tensor_copy_i32.argtypes = [_TensorPointer, ctypes.POINTER(ctypes.c_int32), ctypes.c_size_t]
_lib.ml_tensor_copy_i32.restype = ctypes.c_int
_lib.ml_tensor_to.argtypes = [
    _TensorPointer,
    ctypes.c_int,
    ctypes.c_int,
    ctypes.POINTER(_TensorPointer),
]
_lib.ml_tensor_to.restype = ctypes.c_int
_lib.ml_event_create.argtypes = [ctypes.c_int, ctypes.c_int, ctypes.c_int,
                                 ctypes.POINTER(_EventPointer)]
_lib.ml_event_create.restype = ctypes.c_int
_lib.ml_event_destroy.argtypes = [_EventPointer]
_lib.ml_event_destroy.restype = None
_lib.ml_event_record_default_stream.argtypes = [_EventPointer]
_lib.ml_event_record_default_stream.restype = ctypes.c_int
_lib.ml_event_ready.argtypes = [_EventPointer, ctypes.POINTER(ctypes.c_int)]
_lib.ml_event_ready.restype = ctypes.c_int
_lib.ml_event_synchronize.argtypes = [_EventPointer]
_lib.ml_event_synchronize.restype = ctypes.c_int
_lib.ml_event_elapsed_ms.argtypes = [_EventPointer, _EventPointer,
                                     ctypes.POINTER(ctypes.c_float)]
_lib.ml_event_elapsed_ms.restype = ctypes.c_int
_lib.ml_stream_create.argtypes = [ctypes.c_int, ctypes.c_int, ctypes.c_int,
                                  ctypes.POINTER(_StreamPointer)]
_lib.ml_stream_create.restype = ctypes.c_int
_lib.ml_stream_from_external.argtypes = [ctypes.c_int, ctypes.c_int, _CUintptr,
                                         ctypes.POINTER(_StreamPointer)]
_lib.ml_stream_from_external.restype = ctypes.c_int
_lib.ml_stream_destroy.argtypes = [_StreamPointer]
_lib.ml_stream_destroy.restype = None
_lib.ml_stream_synchronize.argtypes = [_StreamPointer]
_lib.ml_stream_synchronize.restype = ctypes.c_int
_lib.ml_stream_native_handle.argtypes = [_StreamPointer,
                                         ctypes.POINTER(ctypes.c_size_t)]
_lib.ml_stream_native_handle.restype = ctypes.c_int
_lib.ml_stream_is_owning.argtypes = [_StreamPointer, ctypes.POINTER(ctypes.c_int)]
_lib.ml_stream_is_owning.restype = ctypes.c_int
_lib.ml_event_record.argtypes = [_EventPointer, _StreamPointer]
_lib.ml_event_record.restype = ctypes.c_int
_lib.ml_event_wait.argtypes = [_EventPointer, _StreamPointer]
_lib.ml_event_wait.restype = ctypes.c_int
for _name in ("ml_add", "ml_multiply", "ml_matmul"):
    _function = getattr(_lib, _name)
    _function.argtypes = [_TensorPointer, _TensorPointer, ctypes.POINTER(_TensorPointer)]
    _function.restype = ctypes.c_int
_lib.ml_softmax.argtypes = [_TensorPointer, ctypes.POINTER(_TensorPointer)]
_lib.ml_softmax.restype = ctypes.c_int
for _name in ("ml_add_on_stream", "ml_multiply_on_stream",
              "ml_matmul_on_stream"):
    _function = getattr(_lib, _name)
    _function.argtypes = [_TensorPointer, _TensorPointer, _StreamPointer,
                          ctypes.POINTER(_TensorPointer)]
    _function.restype = ctypes.c_int
_lib.ml_softmax_on_stream.argtypes = [
    _TensorPointer, _StreamPointer, ctypes.POINTER(_TensorPointer)]
_lib.ml_softmax_on_stream.restype = ctypes.c_int
for _name in ("ml_multiply_out_on_stream", "ml_matmul_out_on_stream"):
    _function = getattr(_lib, _name)
    _function.argtypes = [_TensorPointer, _TensorPointer, _TensorPointer,
                          _StreamPointer]
    _function.restype = ctypes.c_int
_lib.ml_add_out_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, _TensorPointer, _StreamPointer]
_lib.ml_add_out_on_stream.restype = ctypes.c_int
_lib.ml_softmax_out_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, _StreamPointer]
_lib.ml_softmax_out_on_stream.restype = ctypes.c_int
for _name in ("ml_rms_norm_out_on_stream", "ml_rms_norm_bf16_out_on_stream"):
    _function = getattr(_lib, _name)
    _function.argtypes = [_TensorPointer, _TensorPointer, _TensorPointer,
                          ctypes.c_float, _StreamPointer]
    _function.restype = ctypes.c_int
_lib.ml_swiglu_out_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, _TensorPointer, _StreamPointer]
_lib.ml_swiglu_out_on_stream.restype = ctypes.c_int
_lib.ml_causal_gqa_attention_out_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, _TensorPointer, _TensorPointer,
    _TensorPointer, _TensorPointer, _TensorPointer,
    ctypes.c_int64, ctypes.c_float, _StreamPointer]
_lib.ml_causal_gqa_attention_out_on_stream.restype = ctypes.c_int
_lib.ml_embedding_out_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, _TensorPointer, _StreamPointer]
_lib.ml_embedding_out_on_stream.restype = ctypes.c_int
_lib.ml_rope_out_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, ctypes.c_int64, ctypes.c_int64,
    ctypes.c_float, _StreamPointer]
_lib.ml_rope_out_on_stream.restype = ctypes.c_int
_lib.ml_cross_entropy_out_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, _TensorPointer, _TensorPointer,
    _StreamPointer]
_lib.ml_cross_entropy_out_on_stream.restype = ctypes.c_int
_lib.ml_embedding_backward_add_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, _TensorPointer, _StreamPointer]
_lib.ml_embedding_backward_add_on_stream.restype = ctypes.c_int
_lib.ml_softmax_backward_out_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, _TensorPointer, _StreamPointer]
_lib.ml_softmax_backward_out_on_stream.restype = ctypes.c_int
_lib.ml_rms_norm_backward_out_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, _TensorPointer, _TensorPointer,
    _TensorPointer, _TensorPointer, ctypes.c_float, _StreamPointer]
_lib.ml_rms_norm_backward_out_on_stream.restype = ctypes.c_int
_lib.ml_swiglu_backward_out_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, _TensorPointer, _TensorPointer,
    _TensorPointer, _StreamPointer]
_lib.ml_swiglu_backward_out_on_stream.restype = ctypes.c_int
_lib.ml_rope_backward_out_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, ctypes.c_int64, ctypes.c_int64,
    ctypes.c_float, _StreamPointer]
_lib.ml_rope_backward_out_on_stream.restype = ctypes.c_int
_lib.ml_cross_entropy_backward_out_on_stream.argtypes = [
    _TensorPointer, _TensorPointer, _TensorPointer, _TensorPointer,
    _TensorPointer, _TensorPointer, _StreamPointer]
_lib.ml_cross_entropy_backward_out_on_stream.restype = ctypes.c_int


def _check(status: int) -> None:
    if status == 0:
        return
    message = _lib.ml_last_error()
    decoded = message.decode("utf-8", errors="replace") if message else "unknown engine error"
    raise MicroLLMError(f"microLLM status {status}: {decoded}")


def _parse_device(device: str | Device | tuple[Device, int]) -> tuple[Device, int]:
    if isinstance(device, tuple):
        return Device(device[0]), int(device[1])
    if isinstance(device, Device):
        return device, 0
    kind, separator, index = device.partition(":")
    parsed = Device.CPU if kind.lower() == "cpu" else Device.HIP if kind.lower() == "hip" else None
    if parsed is None:
        raise ValueError(f"unknown device {device!r}")
    return parsed, int(index) if separator else 0


class Tensor:
    def __init__(self, handle: _TensorPointer, owner=None):
        if not handle:
            raise MicroLLMError("cannot construct Tensor from a null handle")
        self._handle = handle
        self._owner = owner

    @classmethod
    def from_f32(
        cls,
        values: Iterable[float],
        shape: Sequence[int],
        device: str | Device | tuple[Device, int] = "cpu",
    ) -> "Tensor":
        flat = [float(value) for value in values]
        dimensions = [int(value) for value in shape]
        expected = 1
        for dimension in dimensions:
            if dimension < 0:
                raise ValueError("shape dimensions must be non-negative")
            expected *= dimension
        if expected != len(flat):
            raise ValueError(f"shape expects {expected} values, received {len(flat)}")
        values_array = (ctypes.c_float * len(flat))(*flat)
        shape_array = (ctypes.c_int64 * len(dimensions))(*dimensions)
        kind, index = _parse_device(device)
        output = _TensorPointer()
        _check(
            _lib.ml_tensor_from_f32(
                values_array, shape_array, len(dimensions), int(kind), index, ctypes.byref(output)
            )
        )
        return cls(output)
